change redirecting between pages

--- a/card.html
+++ b/card.html
@@ -14,7 +14,7 @@
         <hr>
         <h1>Trip to Paris</h1>
         <div class="back-arrow">
-        <a href="#" class="fa fa-arrow-circle-left"></a>
+        <a href="index.html" class="fa fa-arrow-circle-left"></a>
         <p>Back</p>            
         </div>
       </div>
